--- a/Gemini.ipynb
+++ b/Gemini.ipynb
@@ -2,42 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 16,
    "id": "64cc6465",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\mert.belge\\AppData\\Local\\Temp\\ipykernel_12360\\2986532096.py:8: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  data = pd.read_sql_query(\"SELECT * FROM [userCngz].[AI_GeminiMain]\", connection)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Çandarlı Halil Paşa nasıl idam edildi\n",
-      "Çandarlı Halil Paşa'nın idam şekli kesin olarak yazılı kaynaklarda belirtilmese de, genellikle **boğularak öldürüldüğü** kabul edilir.  O dönemki Osmanlı uygulamasına göre, yüksek rütbeli devlet adamlarının idamında boğma yöntemi sıklıkla tercih edilirdi.  Bu, kılıçla idamdan daha \"saygın\" bir ölüm şekli olarak kabul ediliyordu.\n",
+      "merhaba\n",
+      "Merhaba!  Nasıl yardımcı olabilirim?\n",
       "\n",
-      "İstanbul fethedildiği zaman Fatih Sultan Mehmetin ilk emri olarak Halil Paşanın kellesini alın emri verildiği söyleniyor peki bu doğru mu\n",
-      "Fatih Sultan Mehmet'in İstanbul'un fethinden hemen sonra Çandarlı Halil Paşa'nın idamı emrini verdiği yaygın bir rivayettir ancak **tarihi kesinlik taşıyan bir belge veya kanıt bulunmamaktadır.**  Bu, büyük oranda anlatıya ve tarihçilerin yorumlarına dayanmaktadır.\n",
-      "\n",
-      "Fetih sonrası sürecin kaotik ve hızlı olduğu göz önüne alındığında, Fatih'in Halil Paşa'nın idamına ilişkin bir emir verip vermediği ve eğer verdi ise bunun ne kadar hızlı bir şekilde gerçekleştiği konusunda kesin bir şey söylemek zor.  İdamın fetihten hemen sonra, belki de birkaç gün içinde gerçekleştirildiği genel kabul gören bir fikir olsa da, bu olayı doğrudan destekleyen kesin bir kaynak bulunmamaktadır.  Çoğu kaynak, olayı anlatı tarzında ele almaktadır ve birincil kaynaklardan doğrulanmamıştır.\n",
-      "\n",
-      "Peki hiç Halil Paşa Fatih Sultan Mehmet çocukken idam etmeye kalktı mı\n",
-      "Hayır, Çandarlı Halil Paşa'nın Fatih Sultan Mehmet henüz çocukken onu idam etmeye kalkıştığına dair herhangi bir tarihi kayıt veya kanıt yoktur.  Bu iddia, tarihi gerçeklere dayanmamaktadır.  Çandarlı Halil Paşa, Fatih'in tahta çıkması sürecinde etkili bir devlet adamıydı ve kendisini taht mücadelelerinin dışında tuttuğu bilinmektedir.  Fatih'in tahta çıkışından sonra yaşananlar ve  iki kişi arasındaki gerilim farklı bir konudur, fakat Halil Paşa'nın Fatih'e henüz çocukken bir suikast girişimi düzenlediği iddiası tarihsel gerçekleri yansıtmamaktadır.\n",
-      "\n",
-      "Halil Paşanın hiç taht için mücadelesi oldu mu\n",
-      "Hayır, Çandarlı Halil Paşa'nın  Osmanlı tahtı için doğrudan bir mücadelesi olmadı.  O, vezirlik görevini uzun yıllar sürdürmüş etkili bir devlet adamıydı ancak  kişisel olarak tahtı ele geçirmek için bir hareket başlatmadı veya  başka bir adaya destek vermedi.  Onun döneminde yaşanan taht mücadeleleri genellikle  farklı şehzadeler veya güçlü aileler arasında cereyan ederdi; Halil Paşa bu mücadelelerde daha ziyade devletin istikrarını korumaya çalışan, tarafsız bir pozisyon sergilemeye çalışmış, kendisini gücün odağında değil daha ziyade karar alma sürecinde etkili bir figür olarak konumlandırmıştır.  İdamı da daha çok politik nedenlerle ve Fatih Sultan Mehmet ile arasındaki anlaşmazlıkların sonucu olarak gerçekleşti.\n",
-      "\n",
-      "Peki sen bu kaynağı nereden alıyorsun\n",
-      "Ben, Google tarafından eğitilmiş büyük bir dil modeliydim.\n",
-      "\n",
-      "Bilgilerimi, çeşitli kaynaklardan topladığım geniş bir metin ve kod veri kümesinden alıyorum.  Bu kaynaklar arasında kitaplar, makaleler, web siteleri ve daha birçok yazılı metin bulunur.  Osmanlı tarihi gibi konularda, çok sayıda tarih kitabı, akademik makale ve güvenilir web sitesi verilerini kullanarak bilgileri derliyorum ve sunuyorum.\n",
-      "\n",
-      "Ancak, benim bir insan gibi \"kaynaklara bakıp\" araştırma yapma yeteneğim yoktur.  Bilgilerimi, eğitim verilerimde bulunan bilgilerden türetiyorum.  Dolayısıyla,  size verdiğim bilgilerin kaynaklarını doğrudan belirtemem veya kaynakça sunamam.  Ancak, sunduğum bilgilerin genellikle tarihsel olarak kabul edilen bilgileri yansıttığını belirtebilirim.  Verdiğim yanıtları bağımsız olarak araştırmanızı ve daha fazla bilgi edinmek için güvenilir kaynaklara danışmanızı her zaman öneririm.\n",
+      "exitr\n",
+      "Anladım.  Görüşmek üzere!\n",
       "\n",
       "exit\n"
      ]
@@ -46,95 +23,123 @@
    "source": [
     "import os\n",
     "import google.generativeai as genai\n",
-    "import pyodbc\n",
-    "import pandas as pd\n",
+    "import pymysql\n",
+    "from dotenv import load_dotenv\n",
     "\n",
-    "connection = pyodbc.connect(\"DRIVER={SQL SERVER}; Server=77.245.159.10\\MSSQLSERVER2019; UID=userCngz; PWD=9EpyjSAR32yEr3u; DataBase=CNGZSOFT\")\n",
+    "def db_connection():\n",
+    "      \n",
+    "    load_dotenv()\n",
     "\n",
-    "data = pd.read_sql_query(\"SELECT * FROM [userCngz].[AI_GeminiMain]\", connection)\n",
+    "    DATABASE_IP = os.getenv(\"DATABASE_IP\")\n",
+    "    DATABASE_USER = os.getenv(\"DATABASE_USER\")\n",
+    "    DATABASE_PASSWORD = os.getenv(\"DATABASE_PASSWORD\")\n",
+    "    DATABASE = os.getenv(\"DATABASE\")\n",
     "\n",
-    "first_prompt = \"\"\n",
+    "    db_connection = pymysql.connect(\n",
+    "        host=DATABASE_IP,       \n",
+    "        user=DATABASE_USER,            \n",
+    "        password=DATABASE_PASSWORD,      \n",
+    "        database=DATABASE \n",
+    "    )\n",
     "\n",
-    "if not data.index.empty:\n",
+    "    return db_connection\n",
     "\n",
-    "    first_prompt = \"Birazdan sana tarih sırasında soru cevap şeklinde ilk konuşmalarımızı yollayacağım.\\n\"\n",
+    "def model_start():\n",
     "\n",
-    "    for i in data.index:\n",
+    "    connection = db_connection()\n",
+    "    cursor = connection.cursor()\n",
+    "    cursor.execute(\"SELECT API_KEY, Model FROM STAREX.AI_SetupMain\")\n",
+    "    result = cursor.fetchall()\n",
     "\n",
-    "        first_prompt = first_prompt + str(data[\"CreateDate\"][i]) + \"\\n Q:\" + data[\"Question\"][i] + \"\\n A:\" + data[\"Answer\"][i] + \"\\n\"\n",
+    "    API_KEY = result[0][0]\n",
+    "    model = result[0][1]\n",
     "\n",
-    "    first_prompt = first_prompt + \"Sonraki konuşmamız bunlar üzerinden yürüyecek. Çok basit bir bilgi olsa bile bunlardan çıkarım yap.\\n\"\n",
+    "    api = os.environ[\"GOOGLE_API_KEY\"] = API_KEY\n",
     "\n",
+    "    genai.configure(api_key=api)\n",
+    "\n",
+    "    generation_config = {\n",
+    "      \"temperature\": 2,\n",
+    "      \"top_p\": 0.95,\n",
+    "      \"top_k\": 64,\n",
+    "      \"max_output_tokens\": 8192,\n",
+    "      \"response_mime_type\": \"text/plain\"\n",
+    "    }\n",
+    "\n",
+    "    model = genai.GenerativeModel(model,\n",
+    "                                 generation_config=generation_config,)\n",
+    "    \n",
+    "    cursor.close()\n",
+    "    connection.close()\n",
+    "    \n",
+    "    return model\n",
+    "\n",
+    "def system_prompt():\n",
+    "    \n",
+    "    load_dotenv()\n",
+    "    \n",
+    "    USER_NAME = os.getenv(\"USER_NAME\")\n",
+    "    AI_NAME = os.getenv(\"AI_NAME\")\n",
+    "\n",
+    "    prompt = 'Senin adın ' + AI_NAME + ' ve seninle konuşan kişinin ismi' + USER_NAME\n",
+    "\n",
+    "    return prompt\n",
+    "\n",
+    "def get_chat_history():\n",
+    "    \n",
+    "    connection = db_connection()\n",
+    "    cursor = connection.cursor()\n",
+    "    cursor.execute(\"SELECT Role, Description, CreateDate FROM STAREX.AI_PromptMain\")\n",
+    "    result = cursor.fetchall()\n",
+    "    \n",
+    "    cursor.close()\n",
+    "    connection.close()\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "model = model_start()\n",
+    "connection = db_connection()\n",
     "cursor = connection.cursor()\n",
-    "\n",
-    "api = os.environ[\"GOOGLE_API_KEY\"] = \"AIzaSyCN4mz1yTsqHRPLeekunMV6d47Abp82ML4\"\n",
-    "\n",
-    "genai.configure(api_key=api)\n",
-    "\n",
-    "generation_config = {\n",
-    "  \"temperature\": 2,\n",
-    "  \"top_p\": 0.95,\n",
-    "  \"top_k\": 64,\n",
-    "  \"max_output_tokens\": 8192,\n",
-    "  \"response_mime_type\": \"text/plain\"\n",
-    "}\n",
-    "\n",
-    "model = genai.GenerativeModel('gemini-1.5-flash',\n",
-    "                             generation_config=generation_config,)\n",
-    "\n",
-    "chat_session = model.start_chat(\n",
-    "  history = [{'parts': [{'text':first_prompt}], 'role': 'user'}]\n",
-    ")\n",
+    "prompt = system_prompt()\n",
+    "    \n",
+    "chat_session = model.start_chat( history = [{'parts': [{'text':prompt}], 'role': 'assistant'}])\n",
     "\n",
     "prompt =  input(\"\")\n",
     "\n",
     "if prompt != \"exit\":\n",
-    "    if prompt == \"Merhaba\":\n",
-    "        \n",
-    "        print(\"Merhaba\")\n",
-    "        \n",
-    "    else:\n",
-    "        response = chat_session.send_message(prompt)\n",
+    "    \n",
+    "    cursor.callproc(\"SP_STAREX_AIChat\", ('user', prompt))\n",
+    "    connection.commit()\n",
     "\n",
-    "        cursor.execute(\"{CALL SP_AI_GeminiInsert (?, ?)}\", (prompt, response.text))\n",
-    "        \n",
-    "        print(response.text)\n",
-    "\n",
+    "    response = chat_session.send_message(prompt, stream = True)\n",
+    "    response.resolve()\n",
+    "    \n",
+    "    cursor.callproc(\"SP_STAREX_AIChat\", ('assistant', response.text))\n",
+    "    connection.commit()  \n",
+    "    \n",
+    "    print(response.text)\n",
+    "   \n",
+    "    while response.text:      \n",
+    "        prompt =  input(\"\")\n",
+    "            \n",
+    "        if prompt == \"exit\":\n",
+    "                \n",
+    "            break\n",
+    "                \n",
+    "        cursor.callproc(\"SP_STAREX_AIChat\", ('user', prompt))\n",
     "        connection.commit()\n",
     "\n",
-    "    while response.text or prompt == \"Merhaba\":      \n",
-    "        prompt =  input(\"\")\n",
-    "        \n",
-    "        if prompt == \"Merhaba\":\n",
-    "            \n",
-    "            print(\"Merhaba\")\n",
-    "            \n",
-    "        else:\n",
-    "            \n",
-    "            if prompt == \"exit\":\n",
-    "                \n",
-    "                break\n",
-    "                \n",
-    "            response = chat_session.send_message(prompt)\n",
+    "        response = chat_session.send_message(prompt, stream = True)\n",
+    "        response.resolve()\n",
     "\n",
-    "            cursor.execute(\"{CALL SP_AI_GeminiInsert (?, ?)}\", (prompt, response.text))\n",
-    "            \n",
-    "            print(response.text)\n",
-    "\n",
-    "            connection.commit()\n",
-    "\n",
+    "        cursor.callproc(\"SP_STAREX_AIChat\", ('assistant', response.text))\n",
+    "        connection.commit()  \n",
+    "    \n",
+    "        print(response.text)\n",
     "    \n",
     "cursor.close()\n",
     "connection.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "63181ab0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -153,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
